--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>"Rock||Paper||Scissors"</h1>
-        <p>"Clcik the button to play" :)</p>
+        <p>"Click the button to play" :)</p>
         <button onclick="chooseer()" >Run the game</button>
     </div>
     <script src="script.js"></script>
